--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     </header>
     <main>  
         <div class="input">
-            <select name="icon-family" id="icon-family">
-                <option value="orange">Animali</option>
-                <option value="green">Verdura</option>
-                <option value="blue">Utente</option>
+            <select name="icon-family" id="icon-type">
+                <option value="all">All</option>
+                <option value="animal">Animali</option>
+                <option value="vegetable">Verdura</option>
+                <option value="user">Utente</option>
             </select>
         </div>
 
